Plugin can listen for editor, compilatio, and run time error. Now, the next step is to listen for errors on the debugger thread during debugging session

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -32,7 +32,8 @@
     <!-- Add your actions here -->
     <group id="MyPlugin.SampleMenu" text="Error analyzer" description="Sample menu">
       <add-to-group group-id="MainMenu" anchor="last"  />
-      <action id="Myplugin.CompileAnalyze" class="CompileAndAnalyzeMain" text="Start Analyze" description="Begin Analyze" />
+      <action id="Myplugin.StartAnalyze" class="Buttons.CompileAndAnalyzeMain" text="Start Analysis" description="Start Experiment" />
+      <action id="Myplugin.StopAnalyze" class="Buttons.StopAnalysis" text="Stop Analysis" description="Stop Experiment" />
     </group>
   </actions>
 
